# tensorflow-image-models

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  Makefile  README.md  future.md  lora_experiment.py  pyproject.toml  resources.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  publish_test.yml  tests.yml
docs/source/: conf.py  index.rst
docs/source/content/: convnext.rst  efficientnet.rst  layers.rst  lora.rst  models.rst  pit.rst  poolformer.rst  segment_anything.rst  trainer.rst  transformers.rst  utils.rst  vgg.rst
notebooks/: huggingface-model-weights.ipynb  load_pretrained_timm.ipynb  profile-colab.ipynb  profile-gradient.ipynb  tfimm-tutorial.ipynb
results/: profiling_k80.csv  profiling_v100.csv  profiling_v100_mixed.csv  results_k80.csv  results_m4000.csv  results_v100.csv
results/profiling/: cpu.csv  flops.csv  v100.csv  v100_mixed.csv
scripts/: convert_deepware_ai.py  convert_fairface.py  convert_segment_anything.py  convert_timm_to_tf.py  profile_cpu.py  profile_flops.py  profile_gpu.py  test_conversion.py  validate.py
tests/: conftest.py  test_architectures.py  test_timm.py  test_utils.py
tests/architectures/: test_transformers.py  test_vit.py
tests/models/: architectures.py  test_embedding_model.py  test_factory.py  test_lora.py  test_registry.py  test_segment_anything.py
tests/train/: test_config.py  test_optimizer.py
tests/utils/: test_cache.py  test_etc.py
tfimm/: __init__.py
tfimm/architectures/: __init__.py  cait.py  convmixer.py  convnext.py  efficientnet.py  efficientnet_blocks.py  efficientnet_builder.py  mlp_mixer.py  pit.py  poolformer.py  pvt.py  pvt_v2.py  resnet.py  resnetv2.py  spectral_normalization.py  swin.py  vgg.py  vit.py  vit_hybrid.py
tfimm/architectures/lora/: README.md  __init__.py  convnext.py  factory.py  layers.py  registry.py
tfimm/architectures/segment_anything/: __init__.py  common.py  image_encoder.py  mask_decoder.py  predictor.py  prompt_encoder.py  sam.py  transformer.py
tfimm/architectures/segment_anything/torch/: __init__.py  automatic_mask_generator.py  build_sam.py  predictor.py
tfimm/architectures/segment_anything/torch/modeling/: __init__.py  image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py  transformer.py
tfimm/architectures/segment_anything/torch/utils/: onnx.py
tfimm/architectures/timm/: __init__.py  convnext.py  poolformer.py  pvt.py  pvt_v2.py
tfimm/layers/: __init__.py  attention.py  blurpool.py  classifier.py  conv.py  drop.py  factory.py  initializers.py  lora.py  norm.py  spectral_normalization.py  std_conv.py  transformers.py
tfimm/models/: __init__.py  config.py  embedding_model.py  factory.py  registry.py  serialization.py
tfimm/train/: README.md  __init__.py  classification.py  config.py  datasets.py  interface.py  model.py  optimizer.py  registry.py  run_local.py  test.py  timekeeping.py  train.py  trainer.py  utils.py
tfimm/train/datasets/: __init__.py  tfds.py
tfimm/train/examples/: cifar10.py  config.yaml
tfimm/train/optimizers/: lr_schedules.py  optimizer.py  schedules.py
tfimm/train/problems/: __init__.py  classification.py  distillation.py
tfimm/utils/: __init__.py  cache.py  constants.py  download.py  etc.py  flops.py  logging.py  profile.py  timm.py
