[tool.poetry]
name = "tfimm"
version = "0.0.1"
description = "Image models with pretrained weights in TensorFlow"
authors = ["Martins Bruveris"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "*"
tensorflow = ">2.5"

pyyaml = { version = "*", optional = true }
tensorflow-datasets = { version="*", optional = true }
timm = { version = "*", optional = true }
tqdm = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "*"
isort = "*"
pytest = "*"
pytest-timeout = "*"
pytest-xdist = "*"

[tool.poetry.extras]
# Dependencies to load pretrained models from timm; will install PyTorch
timm = ["pyyaml", "timm"]
# Dependencies to train and evaluate models
train = ["tensorflow-datasets", "tqdm"]

[tool.pytest.ini_options]
timeout = 10  # We need tests to be fast, because of GitHub free tier limits

[tool.black]
line-length = 88
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.tox
  | \\.venv
  | tmp
)/
"""

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
